--- a/Project_2_Final/Project_2_Final/Proj_2.ipynb
+++ b/Project_2_Final/Project_2_Final/Proj_2.ipynb
@@ -11,19 +11,7 @@
     " \n",
     "## `HYPOTHESIS GENERATION`\n",
     "\n",
-    "1. Square Footage Hypothesis: It is anticipated that there will be a strong positive link between the house's overall square footage and its value. Bigger living areas typically fetch greater costs since they are more attractive.\n",
-    " \n",
-    "2. Bathroom Count Hypothesis: The number of bathrooms on a house is positively connected with its value. It is anticipated that homes with additional bathrooms will fetch higher prices since they are more useful, convenient, and appealing.\n",
-    " \n",
-    "3. Floor Hypothesis: Because they may offer greater living space and possibly nicer views, properties with multiple levels may be worth more.\n",
-    " \n",
-    "4. Condition Hypothesis: Higher values are anticipated for properties that are in better shape. A property that has been well-maintained is probably going to cost more money than one that needs extensive repairs or improvements.\n",
-    " \n",
-    "5. Renovation Hypothesis: Properties that have undergone renovations are probably worth more than those that haven't. A property's value, charm, and usability can all be improved with renovations.\n",
-    " \n",
-    "6. Basement Hypothesis: Property value is positively impacted by the existence of a basement. It is anticipated that larger basement spaces will increase the value of a home.\n",
-    " \n",
-    "7. Year Built Hypothesis: Newer properties tend to have higher values compared to older ones due to modern amenities, construction quality, and desirability."
+    "In our real estate analysis, we consider several hypotheses impacting property value. First, there’s a strong positive correlation between a house’s square footage and its value. Larger living areas tend to fetch higher prices. Second, the number of bathrooms positively influences a home’s value. Properties with more bathrooms are more convenient and appealing, commanding higher prices. Third, multi-level properties may be worth more due to increased living space and potential views. Fourth, well-maintained homes are likely to cost more than those needing repairs. Fifth, renovations enhance a property’s value. Sixth, basements positively impact property value. Finally, newer properties tend to have higher values due to modern amenities and desirability."
    ]
   },
   {
